tests/baselines/reference/asyncGenerators.objectLiteralMethod.21.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/objectLiteralMethods/asyncGenerators.objectLiteralMethod.21.es6.ts(2,14): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/asyncGenerators/es6/objectLiteralMethods/asyncGenerators.objectLiteralMethod.21.es6.ts (1 errors) ====
    const x = {
        async * [yield]() {
                 ~~~~~
!!! error TS2304: Cannot find name 'yield'.
        }
    }